package by.bsuir.labworks.common;

import by.bsuir.labworks.tour.dto.TourDto;
import by.bsuir.labworks.tour.entity.Tour;

import org.springframework.stereotype.Component;

@Component
public class TourMapper {
  public TourDto toDto(Tour tour) {
    if (tour == null) {
      return null;
    }
    TourDto dto = new TourDto();
    dto.setId(tour.getId());
    dto.setName(tour.getName());
    dto.setDescription(tour.getDescription());
    dto.setCountry(tour.getCountry());
    dto.setDurationDays(tour.getDurationDays());
    dto.setPrice(tour.getPrice());
    dto.setHot(tour.isHot());
    return dto;
  }

  public Tour toEntity(TourDto dto) {
    if (dto == null) {
      return null;
    }
    Tour tour = new Tour();
    tour.setId(dto.getId());
    tour.setName(dto.getName());
    tour.setDescription(dto.getDescription());
    tour.setCountry(dto.getCountry());
    tour.setDurationDays(dto.getDurationDays());
    tour.setPrice(dto.getPrice());
    tour.setHot(dto.isHot());
    return tour;
  }
}